# vacation-gauntlet

./: .createFolders.py.swp  .gitignore  CMakeLists.txt  README.md  createFolders.py
day01/: main.cpp
day02/: main.cpp
day03/: main.cpp
day04/: main.cpp
day05/: main.cpp
day06/: main.cpp
day07/: main.cpp
day08/: main.cpp
day09/: main.cpp
day1/: main.cpp
day10/: main.cpp
day13/: main.cpp
day14/: main.cpp
day15/: main.cpp
day16/: main.cpp
day20/: AllocationsTracker.hpp  main.cpp
day3/: main.cpp
day4/: main.cpp
day5/: main.cpp
day6/: main.cpp
utility/: Node.h  Timer.h  createFolders.py  input.h
